--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,11 @@
 header {
   width: 100%;
   height: 15vh;
-  border: thin solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  background-color: var(--primary);
 }
 
 header > * {
