--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,14 +1,38 @@
 footer {
   width: 100%;
-  height: 50vh;
+  height: max-content;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-direction: column;
-  background-color: var(--primary);
+  border-top: thin solid var(--six);
 }
 
 footer > * {
   width: 90%;
-  border: thin solid black;
+  margin-top: 2vh;
+  border: thin solid var(--six);
+  margin-bottom: 2vh;
+}
+
+#footer-head {
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#footer-body {
+  height: 35vh;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
+}
+
+#footer-foot {
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
