--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -16,3 +16,9 @@ header > * {
   align-items: center;
   justify-content: space-evenly;
 }
+
+header a {
+  color: var(--second);
+  text-decoration: none;
+  font-size: 1rem;
+}
