--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -11,7 +11,6 @@ footer {
 footer > * {
   width: 90%;
   margin-top: 2vh;
-  border: thin solid var(--six);
   margin-bottom: 2vh;
 }
 
@@ -36,12 +35,6 @@ footer > * {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-}
-
-#footer-body {
-  height: 35vh;
-  margin-top: 4vh;
-  margin-bottom: 4vh;
 }
 
 #footer-foot {
@@ -73,4 +66,45 @@ footer > * {
 #footer-foot > span > a {
   font-size: 1rem;
   color: var(--primary);
+}
+
+#footer-body {
+  height: 35vh;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#footer-body > * {
+  height: 100%;
+  border: thin solid var(--six);
+}
+
+.foot-cont {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.foot-cont > h4 {
+  font-size: 1.2rem;
+  margin-bottom: 1vh;
+  color: var(--six);
+}
+
+.foot-cont > a {
+  font-size: 1rem;
+  margin-bottom: 1vh;
+  color: var(--six);
+  margin-top: 0.5vh;
+  margin-bottom: 0.5vh;
+}
+
+.foot-cont1 {
+  width: 25%;
 }
