create structure for footr newsleetre

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,14 @@ a {
   text-decoration: none;
 }
 
+input:focus {
+  outline: none;
+}
+
+button {
+  cursor: pointer;
+}
+
 :root {
   --primary: #024751;
   --second: #23d06a;
