--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -80,7 +80,7 @@ footer > * {
 
 #footer-body > * {
   height: 100%;
-  border: thin solid var(--six);
+  /* border: thin solid var(--six); */
 }
 
 .foot-cont {
@@ -107,4 +107,45 @@ footer > * {
 
 .foot-cont1 {
   width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.foot-cont1 > h3 {
+  font-size: 1.5rem;
+  color: var(--primary);
+  margin-bottom: 1vh;
+}
+.newsletter-form {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.newsletter-form > input {
+  width: 100%;
+  height: 5vh;
+  border: thin solid var(--six);
+  margin-top: 0.5vh;
+  margin-bottom: 0.5vh;
+  text-align: center;
+  font-size: 1rem;
+}
+.newsletter-form > button {
+  width: 100%;
+  font-size: 1rem;
+  height: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: thin solid var(--second);
+  background-color: var(--second);
+  color: var(--primary);
+  border-radius: 5px;
 }
