--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,24 +1,62 @@
 header {
   width: 100%;
-  height: 15vh;
+  height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-color: var(--primary);
+  border-bottom: thin solid var(--six);
 }
 
 header > * {
-  height: 50%;
+  height: 100%;
   width: 90%;
-  border: thin solid black;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 header a {
-  color: var(--second);
+  color: var(--primary);
   text-decoration: none;
   font-size: 1rem;
+}
+
+#header > nav {
+  height: 100%;
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#header > nav > a {
+  font-size: 1.2rem;
+}
+
+.logo {
+  font-size: 2rem;
+  width: 10%;
+  font-weight: 600;
+  color: var(--primary);
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#header > button {
+  width: 12%;
+  height: 5.5vh;
+  font-size: 1.2rem;
+  /* background-color: var(--primary); */
+  background-color: white;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 2px;
 }
