--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -13,6 +13,34 @@
   height: 70vh;
 }
 
+#landing-1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#landing-1 > div {
+  height: 100%;
+  border: thin solid black;
+}
+
+#landing-1-1 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+#landing-1-1 > * {
+  margin-bottom: 2vh;
+}
+
+#landing-1-2 {
+  width: 50%;
+}
+
 #landing-3 {
   display: flex;
   flex-direction: column;
