--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -75,7 +75,7 @@
 }
 
 #landing-1-1 > * {
-  margin-bottom: 2vh;
+  margin-bottom: 4vh;
 }
 
 #landing-1-1 > h1 {
@@ -99,6 +99,37 @@
 
 #landing-1-2 {
   width: 50%;
+}
+
+#landing-div {
+  width: 100%;
+  background-color: white;
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#landing-div > h2 {
+  font-size: 3rem;
+  color: var(--primary);
+}
+
+#landing-div > p {
+  font-size: 1.2rem;
+  text-align: center;
+  color: var(--six);
+}
+
+#landing-div > div {
+  height: 80%;
+  width: 100%;
+  border: thin solid black;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 #landing-3 {
