--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -132,6 +132,13 @@
   justify-content: space-evenly;
 }
 
+#landing-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 #landing-3 {
   display: flex;
   flex-direction: column;
