--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -141,17 +141,19 @@
 }
 
 #landing-2 > * {
-  margin-top: 1vh;
-  margin-bottom: 1vh;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
 }
 
 .l2-par1 {
   font-size: 1.2rem;
   color: var(--primary);
+  text-align: center;
 }
 
 .l2-par2 {
   font-size: 1.2rem;
+  text-align: center;
   color: var(--six);
 }
 
@@ -236,12 +238,54 @@
 
 #landing-2-cont1 {
   width: 100%;
-  border: thin solid black;
   height: 15vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+#landing-2-cont1 > span {
+  width: 50%;
+  height: 100%;
+}
+
+#landing-2-cont1 > :first-child {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+
+#landing-2-cont1 > :first-child > h3 {
+  font-size: 3rem;
+  color: var(--primary);
+}
+
+#landing-2-cont1 > :first-child > p {
+  font-size: 1.2rem;
+  color: var(--six);
+  width: 90%;
+}
+
+#landing-2-cont1 > :last-child {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#landing-2-cont1 > :last-child > span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 110px;
+  width: 110px;
+  border: thin solid black;
+  border-radius: 50%;
+  margin-left: -1vw;
+  background-color: white;
 }
 
 #landing-2-cont2 {
@@ -251,19 +295,26 @@
   justify-content: space-evenly;
   width: 100%;
   height: 15vh;
-  /* border: thin solid black; */
 }
 
 #landing-2-cont2 > span {
   height: 100%;
-  border: thin solid black;
   background-color: white;
   color: var(--primary);
-  width: 20%;
+  border-radius: 10px;
+  width: 18%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+#landing-2-cont2 > span > h4 {
+  font-size: 3rem;
+}
+
+#landing-2-cont2 > span > p {
+  font-size: 1.2rem;
 }
 
 #landing-3 {
