--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -7,7 +7,6 @@
 
 #landing > section {
   width: 90%;
-  border: thin solid black;
   margin-top: 2vh;
   margin-bottom: 2vh;
   min-height: 70vh;
@@ -15,6 +14,7 @@
 
 #landing-1 {
   display: flex;
+  height: 50vh;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -125,7 +125,6 @@
 #landing-div > div {
   height: 80%;
   width: 100%;
-  border: thin solid black;
   display: flex;
   flex-direction: row;
   align-items: center;
