--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -14,7 +14,7 @@
 
 #landing-1 {
   display: flex;
-  height: 50vh;
+  height: 60vh;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content:space-evenly;
 }
 
 #landing-buttons {
