--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -22,7 +22,6 @@
 
 #landing-1 > div {
   height: 100%;
-  border: thin solid black;
 }
 
 #landing-1-1 {
@@ -30,7 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
 
 #landing-buttons {
@@ -406,3 +405,59 @@
   border-top-left-radius: 3px;
   border-bottom-left-radius: 10px;
 }
+
+#landing-5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  border: thin solid;
+  height: max-content;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
+}
+
+#landing-5 > h2 {
+  font-size: 3rem;
+  color: var(--primary);
+  text-align: center;
+}
+
+#landing-5 > p {
+  font-size: 1.2rem;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  color: var(--six);
+  text-align: center;
+}
+
+#landing-5 > a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 18%;
+  height: 7vh;
+  background-color: var(--primary);
+  border: thin solid var(--primary);
+  color: var(--third);
+  font-size: 1.2rem;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 10px;
+}
+
+#landing-5-cont {
+  height: 70vh;
+  border: thin solid black;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
