--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -461,3 +461,86 @@
   justify-content: center;
 }
 
+#landing-6 {
+  width: 100%;
+  border: thin solid black;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
+}
+
+#landing-6 > h2 {
+  font-size: 3rem;
+  color: var(--primary);
+}
+
+#landing-6 > p {
+  font-size: 1.2rem;
+  color: var(--six);
+  text-align: center;
+  width: 80%;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
+
+#l6-cont {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#l6-cont-1 {
+  width: 50%;
+  height: 100%;
+  background-image: url(https://images.pexels.com/photos/4715450/pexels-photo-4715450.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-position: center;
+  background-size: cover;
+}
+
+#l6-cont-2 {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#l6-cont-2 > * {
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+}
+
+#l6-cont-2 > p {
+  color: var(--primary);
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  width: 75%;
+  color: var(--six);
+}
+
+#l6-cont-2 > a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 25%;
+  height: 7vh;
+  background-color: var(--primary);
+  border: thin solid var(--primary);
+  color: var(--third);
+  font-size: 1.2rem;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 10px;
+}
