--- a/src/pages/modules/modules.css
+++ b/src/pages/modules/modules.css
@@ -4,28 +4,87 @@
   align-items: center;
   justify-content: flex-start;
 }
-#modules > section {
-  width: 90%;
-  height: max-content;
-  padding-top: 3vh;
-  padding-bottom: 3vh;
-}
 
 #modules-1 {
+  width: 100%;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  background-image: url(https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover; /* make sure the image covers the entire section */
+  background-position: center; /* center the image */
+  position: relative; /* make the section a positioned container for the pseudo-element */
+}
+
+#modules-1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px); /* add the blur effect */
+  z-index: -1; /* put the pseudo-element behind the content */
+}
+
+#modules-1 > * {
+  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
 
 #modules-1 > h2 {
-  color: var(--primary);
-  font-size: 3rem;
+  color: var(--second);
+  font-size: 4rem;
   text-align: center;
 }
 
 #modules-1 > p {
-  color: var(--six);
-  font-size: 1.2rem;
+  color: white;
+  width: 70%;
+  font-size: 1.5rem;
   text-align: center;
+}
+
+#modules-1 > span {
+  width: 50%;
+  height: 6vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#modules-1 > span > button {
+  font-size: 1.2rem;
+  height: 100%;
+  width: 20%;
+  padding-left: 1vw;
+  padding-right: 1vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#modules-1 > span > :first-child {
+  background-color: var(--second);
+  border: thin solid var(--second);
+  color: var(--primary);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 10px;
+}
+
+#modules-1 > span > :last-child {
+  background-color: var(--second);
+  border: thin solid var(--second);
+  color: var(--primary);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 10px;
 }
