--- a/src/pages/modules/modules.css
+++ b/src/pages/modules/modules.css
@@ -25,6 +25,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px); /* add the blur effect */
   z-index: -1; /* put the pseudo-element behind the content */
 }
