--- a/src/pages/modules/modules.css
+++ b/src/pages/modules/modules.css
@@ -89,3 +89,42 @@
   border-top-left-radius: 3px;
   border-bottom-left-radius: 10px;
 }
+
+.courses-container {
+  width: 90%;
+  /* border: thin solid black; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
+
+.course-header {
+  width: 100%;
+  height: 6vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.course-header > h2 {
+  font-size: 3rem;
+  color: var(--primary);
+}
+.course-header > button {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: thin solid var(--primary);
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: var(--primary);
+  color: var(--second);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
