--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -98,8 +98,16 @@
 
 #landing-1-2 {
   width: 50%;
+  border: thin solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
+#landing-1-2 >img{
+  height: 100%;
+}
 #landing-div {
   width: 100%;
   background-color: white;
