--- a/src/components/carousels/car.css
+++ b/src/components/carousels/car.css
@@ -2,3 +2,11 @@
   width: 100%;
   height: 100%;
 }
+.my-carousel-container {
+  position: relative;
+  height: 100%;
+}
+
+.my-carousel-item {
+  height: 100%;
+}
