--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -105,7 +105,7 @@
   justify-content: center;
 }
 
-#landing-1-2 >img{
+#landing-1-2 > img {
   height: 100%;
 }
 #landing-div {
@@ -240,6 +240,8 @@
   align-items: center;
   text-align: center;
   justify-content: center;
+  background-position: center;
+  background-size: cover;
 }
 
 #landing-2-cont1 {
@@ -321,6 +323,22 @@
 
 #landing-2-cont2 > span > p {
   font-size: 1.2rem;
+}
+
+#l2-cs-1 {
+  background-image: url(https://images.pexels.com/photos/3183183/pexels-photo-3183183.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+}
+
+#l2-cs-2 {
+  background-image: url(https://images.pexels.com/photos/1181421/pexels-photo-1181421.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+}
+
+#l2-cs-3 {
+  background-image: url(https://images.pexels.com/photos/2422294/pexels-photo-2422294.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+}
+
+#l2-cs-4 {
+  background-image: url(https://images.pexels.com/photos/7376/startup-photos.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
 }
 
 #landing-3 {
