--- a/src/components/carousels/car.css
+++ b/src/components/carousels/car.css
@@ -1,12 +1,4 @@
-.our-carousel {
-  width: 100%;
-  height: 100%;
-}
-.my-carousel-container {
-  position: relative;
-  height: 100%;
-}
-
-.my-carousel-item {
-  height: 100%;
+.carouse-container {
+  border: thin solid black;
+  width: 80%;
 }
