--- a/src/pages/admission/admis.css
+++ b/src/pages/admission/admis.css
@@ -120,7 +120,7 @@
   width: 100%;
   margin-top: 3vh;
   margin-bottom: 3vh;
-  height: 70vh;
+  height: max-content;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -129,7 +129,7 @@
 
 #a4-cont {
   width: 90%;
-  height: 100%;
+  height: max-content;
   border: thin solid black;
   display: flex;
   flex-direction: row;
@@ -139,8 +139,7 @@
 
 #admis-contact-form {
   width: 50%;
-  height: 100%;
-  border: thin solid black;
+  height: max-content;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -149,5 +148,89 @@
 
 #admis-contact-form > * {
   width: 100%;
-  border: thin solid black;
+  margin-top:1.5vh;
+  margin-bottom: 1.5vh;
+}
+
+#admis-contact-form > h3 {
+  font-size: 3rem;
+  color: var(--primary);
+}
+
+#admis-contact-form > p {
+  font-size: 1.2rem;
+  color: var(--six);
+}
+
+#admis-contact-form > span {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#admis-contact-form > span > label {
+  margin-right: 3vw;
+  height: 100%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#admis-contact-form > span > label > p {
+  font-size: 1rem;
+  color: var(--six);
+}
+
+#admis-contact-form > span > label > input {
+  height: 5vh;
+  width: 100%;
+  border: thin solid var(--six);
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+#admis-contact-form > label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#admis-contact-form > label > input {
+  height: 5vh;
+  font-size: 1rem;
+  border: thin solid var(--six);
+  border-radius: 4px;
+}
+
+#admis-contact-form > label > p {
+  font-size: 1rem;
+  color: var(--six);
+}
+
+textarea:focus {
+  outline: none;
+}
+
+#admis-contact-form > label > textarea {
+  font-size: 1rem;
+  color: var(--six);
+  width: 70%;
+  height: 20vh;
+  border: thin solid 4px;
+}
+
+#admis-contact-form > button {
+  width: 30%;
+  height: 6vh;
+  background-color: var(--primary);
+  color: var(--third);
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
 }
