--- a/src/pages/admission/admis.css
+++ b/src/pages/admission/admis.css
@@ -130,7 +130,6 @@
 #a4-cont {
   width: 90%;
   height: max-content;
-  border: thin solid black;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -148,7 +147,7 @@
 
 #admis-contact-form > * {
   width: 100%;
-  margin-top:1.5vh;
+  margin-top: 1.5vh;
   margin-bottom: 1.5vh;
 }
 
@@ -171,7 +170,7 @@
 #admis-contact-form > span > label {
   margin-right: 3vw;
   height: 100%;
-  width: 30%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -184,10 +183,11 @@
 }
 
 #admis-contact-form > span > label > input {
-  height: 5vh;
+  height: 6vh;
   width: 100%;
   border: thin solid var(--six);
-  border-radius: 4px;
+  border-radius: 2.5px 10px 10px 10px;
+  text-align: center;
   font-size: 1rem;
 }
 
@@ -199,10 +199,12 @@
 }
 
 #admis-contact-form > label > input {
-  height: 5vh;
+  height: 6vh;
+  width: 40%;
   font-size: 1rem;
   border: thin solid var(--six);
-  border-radius: 4px;
+  border-radius: 2.5px 10px 10px 10px;
+  text-align: center;
 }
 
 #admis-contact-form > label > p {
@@ -219,7 +221,7 @@ textarea:focus {
   color: var(--six);
   width: 70%;
   height: 20vh;
-  border: thin solid 4px;
+  border: thin solid var(--six);
 }
 
 #admis-contact-form > button {
@@ -233,4 +235,5 @@ textarea:focus {
   align-items: center;
   justify-content: center;
   font-size: 1.2rem;
+  border-radius: 2.5px 10px 10px 10px;
 }
