--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -98,11 +98,14 @@
 
 #landing-1-2 {
   width: 50%;
-  border: thin solid black;
   display: flex;
+  height: 120%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url(https://images.pexels.com/photos/247819/pexels-photo-247819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-position: center;
+  background-size: cover;
 }
 
 #landing-1-2 > img {
