--- a/src/components/carousels/car.css
+++ b/src/components/carousels/car.css
@@ -1,4 +1,33 @@
-.carouse-container {
+.carousel-cont {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.carousel-item {
+  height: 90%;
+  width: 100%;
   border: thin solid black;
-  width: 80%;
+}
+
+#carousel-nav {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#carousel-nav > * {
+  border: thin solid var(--primary);
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
 }
