--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -373,24 +373,31 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 80vh;
+  height: max-content;
 }
 
 #landing-3 > h2 {
   font-size: 3rem;
   text-align: center;
   color: var(--primary);
+  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
 
 #landing-3 > p {
   font-size: 1.2rem;
   text-align: center;
   color: var(--six);
+  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
 
 #landing-3-cont {
-  height: 65vh;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
+  height: 80vh;
   width: 100%;
+  border: thin solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
