--- a/src/components/carousels/car.css
+++ b/src/components/carousels/car.css
@@ -26,10 +26,16 @@
 }
 
 .carousel-item-nav > * {
-  border: thin solid var(--primary);
+  border: thin solid transparent;
+  background-color: transparent;
   border-radius: 50%;
   height: 50px;
   width: 50px;
+}
+
+.carousel-item-nav > * > * {
+  font-size: 3rem;
+  color: var(--primary);
 }
 
 #carousel-nav {
@@ -44,12 +50,37 @@
 .car-item {
   height: 100%;
   width: 90%;
-  /* border: thin solid black; */
   background-color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 20px;
+}
+
+.car-item > span {
+  height: 100%;
+}
+
+.car-section-1 {
+  width: 45%;
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
+  background-position: center;
+  background-size: cover;
+}
+
+#car-section-1 {
+  background-image: url(https://images.pexels.com/photos/577210/pexels-photo-577210.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+}
+
+.car-section-2 {
+  width: 55%;
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
+  background-color: var(--primary);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #carousel-nav > * {
