recreate the structure of the testimonial carousel

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -453,9 +453,22 @@
   margin-bottom: 2vh;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+#landing-5-cont > div {
+  border: thin solid black;
+  height: 100%;
+}
+
+#landing-5-cont1 {
+  width: 40%;
+}
+
+#landing-5-cont2 {
+  width: 60%;
 }
 
 #landing-6 {
