create the testimonial card

--- a/src/components/carousels/tezt.css
+++ b/src/components/carousels/tezt.css
@@ -19,7 +19,6 @@
 .testimon-item-nav {
   height: 100%;
   width: 10%;
-  border: thin solid black;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -56,4 +55,71 @@
   border-radius: 50%;
   margin-left: 0.5vw;
   margin-right: 0.5vw;
+}
+
+.testimonial-item {
+  border: thin solid var(--six);
+  width: 50%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.testimonial-item > * {
+  width: 100%;
+}
+
+.testimonial-item-image {
+  height: 55%;
+  background-position: center;
+  background-size: cover;
+}
+
+.testimonial-item-quote {
+  height: 8%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.testimonial-item-quote > * {
+  color: var(--primary);
+  font-size: 3rem;
+}
+
+.testimonial-item-info {
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.testimonial-item-info > * {
+  width: 80%;
+}
+
+.testimonial-item-info > p {
+  color: var(--six);
+  font-size: 1.2rem;
+}
+
+.testimonial-item-info > h3 {
+  color: var(--primary);
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.testimonial-item-info > h5 {
+  color: var(--primary);
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+#testimonial-item-image-1 {
+  background-image: url(https://images.pexels.com/photos/773371/pexels-photo-773371.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
 }
