--- a/src/components/carousels/tezt.css
+++ b/src/components/carousels/tezt.css
@@ -123,3 +123,11 @@
 #testimonial-item-image-1 {
   background-image: url(https://images.pexels.com/photos/773371/pexels-photo-773371.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
 }
+
+#testimonial-item-image-2 {
+  background-image: url(https://images.pexels.com/photos/428333/pexels-photo-428333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+}
+
+#testimonial-item-image-3 {
+  background-image: url(https://images.pexels.com/photos/12577426/pexels-photo-12577426.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+}
