make the header component to be sticky

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,6 +8,13 @@ header {
   border-bottom: thin solid var(--six);
 }
 
+header.sticky {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+}
+
 header > * {
   height: 100%;
   width: 90%;
