--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -55,7 +55,7 @@ header a {
   justify-content: flex-start;
 }
 
-#header > button {
+#contact-us {
   width: 12%;
   height: 6.5vh;
   font-size: 1.2rem;
@@ -66,4 +66,63 @@ header a {
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
   border-top-left-radius: 2px;
+}
+
+#hambugger {
+  display: none;
+}
+
+.logo1 {
+  display: none;
+}
+
+/* Phones and Tablets Combined */
+@media only screen and (max-width: 1023px) {
+  /* Your CSS styles for phones, small tablets, and tablets in landscape mode go here */
+
+  #header {
+    width: 99%;
+  }
+
+  header{
+    width: 100vw;
+    background-color: white;
+  }
+
+  #header > nav {
+    display: none;
+  }
+
+  #contact-us {
+    display: none;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .logo1 {
+    height: 90%;
+    width: 10%;
+    display: flex;
+  }
+
+  #hambugger {
+    width: 10%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: transparent;
+    border: thin solid transparent;
+  }
+
+  #hambugger > * {
+    width: 100%;
+    height: 5%;
+    border: thin solid var(--primary);
+    background-color: var(--primary);
+    border-radius: 20px;
+  }
 }
